# doc_gemini_v12

./: .gitignore  README.md  document_parser.py  example.env  gemini_cli_config_examples_zh-TW.md  main.py  main.spec  pyproject.toml  updated_memory_bank_summary.md
.clinerules/: flet.md  rules.md  zip_context.md
.roo/rules/: zip_context.md
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
